--- a/src/styles/production/ui/popups/_popups.scss
+++ b/src/styles/production/ui/popups/_popups.scss
@@ -15,15 +15,8 @@
 	width: 100%;
 	height: 100%;
 		
-	&, * {
-		pointer-events: none;
-	}
-
-	opacity: 0;
-
-	transition: opacity 1s ease-in-out;
-	transition-delay: 0s;
-
+	pointer-events: none;
+	
 	.popups-close {
 		@extend .back-button;
 		transition: opacity 0.5s ease-in-out;
@@ -34,61 +27,63 @@
 		}
 	}
 }
-
-.customize-labels-fast-transition.page__orbit-viewer .popups-wrapper {
-	transition-delay: 0s;
-}
-
-.customize-labels-hidden.page__orbit-viewer .popups-wrapper {
-	opacity: 0;
-	&, * {
-		pointer-events: none;
-	}
-}
-
-.popups-active .popups-close {
+// TIMES TOP RIGHT
+.popups-selected .popups-close {
 	transition-delay: 4s;
 	transition-duration: 1s;
 	opacity: 1;
-	&, * {
+
+	&,
+	* {
 		pointer-events: all;
 	}
 }
+// .popups-no-closeup .popups-wrapper.popups-labels .popup-label.selected {
+// 	.icon-text p {
+// 		opacity: 0;
+// 	}
+// }
 
-.page__orbit-viewer .popups-wrapper {
-	opacity: 1;
-	transition-delay: 1.5s;
-}
+// .customize-labels-fast-transition.page__orbit-viewer .popups-wrapper {
+// 	transition-delay: 0s;
+// }
 
-.popups-wrapper.popups-labels.hidden {
-	transition-delay: 0s;
-	opacity: 0;
-
-	&, * {
-		pointer-events: none;
-	}
-}
-
-.page__guided-experiences-tours .popups-wrapper.popups-labels {
-	&, * {
-		transition-delay: 0s;
-		transition-duration: 0s;
-		pointer-events: none;
-	}
-}
+// .customize-labels-hidden.page__orbit-viewer .popups-wrapper {
+// 	opacity: 0;
+// 	&, * {
+// 		pointer-events: none;
+// 	}
+// }
 
 
-.popups-no-closeup .popups-wrapper.popups-labels .popup-label:not(.selected) {
-	transition-delay: 0s;
-	opacity: 0 !important;
+// .page__orbit-viewer .popups-wrapper {
+// 	opacity: 1;
+// 	transition-delay: 1.5s;
+// }
 
-	&, * {
-		pointer-events: none;
-	}
-}
+// .popups-wrapper.popups-labels.hidden {
+// 	transition-delay: 0s;
+// 	opacity: 0;
 
-.popups-no-closeup .popups-wrapper.popups-labels .popup-label.selected {
-	.icon-text p {
-		opacity: 0;
-	}
-}
+// 	&, * {
+// 		pointer-events: none;
+// 	}
+// }
+
+// .page__guided-experiences-tours .popups-wrapper.popups-labels {
+// 	&, * {
+// 		transition-delay: 0s;
+// 		transition-duration: 0s;
+// 		pointer-events: none;
+// 	}
+// }
+
+
+// .popups-no-closeup .popups-wrapper.popups-labels .popup-label:not(.selected) {
+// 	transition-delay: 0s;
+// 	opacity: 0 !important;
+
+// 	&, * {
+// 		pointer-events: none;
+// 	}
+// }
